# LightByLight2018

HeavyIonsAnalysis/PhotonAnalysis/interface/: ggHiNtuplizer.h
HeavyIonsAnalysis/PhotonAnalysis/plugins/: ggHiNtuplizer.cc
analysis/: .__afs078C  .__afs874E  .__afs8D8A  .__afsB8AF  .__afsCA1E  .__afsDCBB  .prepareEleMuPlots.cpp.swm  CMakeLists.txt  EleMu.cpp  Electrons_2023  TunfoldTree.cpp  Unfold.cpp  ZeroBias.cpp  applySelections.cpp  getEfficienciesQED.cpp  info.txt  input_list_STMuon.txt  input_list_Vtx_Pranati.txt  input_list_withAllConversions.txt  makeQEDUnfoldingTrees  makeQEDUnfoldingTrees.cpp  makeUnfoldingTrees  note.txt  prepareEleMuPlots.cpp  prepareElectronIDplots.cpp  preparePhotonIDplots.cpp  selectDiphotonEventsWithConvertedPhoton.cpp  selectDiphotonEvents_Conversion.cpp  selectDiphotonEvents_conv.cpp  selectDiphotonEvents_old.cpp  selectDiphotonForZSStudy  selectDiphotonForZSStudy.cpp  selectEleMuEvents  selectEleMuEvents.cpp  selectGenEleMuEvents.cpp  selectMuMuEvents  selectMuMuEvents.cpp  setenv.sh
analysis/PlottingMacros/: ReadMuMuTree.h  ReadTauTauTree.h  ReadTree.h  plot_FromTree.C  plot_FromTree_combine.C  plot_ggee.C
analysis/condor/: .__afs4EF8  .__afsA4A6  runApplySelections.sh  runEfficienciesQED.sh  runEfficienciesQED.sub  runPhotonIDplots.sh  runPhotonIDplots.sub  runSelectDiphotonEvents.sh  runSelectDiphotonEvents.sub  runSelectQEDEvents.sh  runSelectQEDEvents.sub  runselectEleMuEvents.sh  runselectEleMuEvents.sub  submitjobs.py  test.sh  test.sub
analysis/configs/: efficiencies_HFVeto_withEleIsolatioNewThresholdsEta2p2_photonIsolation0p035.md  efficiencies_eleNoIsolation.md  efficiencies_eleNoIsolation_newThresholdsEta2p2.md  efficiencies_newThresholds.md
analysis/configs/input_files/: MakeInputFile.py  applyselection_input.txt  data_config.txt
analysis/include/: Event.hpp  EventProcessor.hpp  Helpers.hpp  PhysObject.hpp  PhysObjectProcessor.hpp
analysis/plottingMacros/: ReadTree.h  count_events_ID.C  count_events_ID_QED.C  count_events_Modified.C  plotQED_Reco_Pranati.C  plot_data_mc_comp_New.C  plot_data_mc_comp_Old.C  plot_data_mc_comp_Old2.C
analysis/plottingMacros/plottingMacros_For_Dielectron_Paper/: CMS_lumi.h  MyCanvas.C  ReadQEDTree.h  plotQED_Reco_Pranati.C
analysis/src/: Event.cpp  EventProcessor.cpp  PhysObject.cpp  PhysObjectProcessor.cpp
plottingMacros/: ReadMuMuTree.C  ReadMuMuTree.h  plot_ggMuMu.C  tnp_muon_UPC_PbPb2018.h
unfolding/lbyl/: Check.C  draw_LbL_gUPC.C  draw_unfold.C  draw_unfold_Invert_LbL.C  makeUnfold.cxx
unfolding/qed/: QED_SC.cxx  draw_QED_gUPC.C  draw_unfold_QED_SC.C
