cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project (LightByLight)

list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

find_package(ROOT REQUIRED COMPONENTS Minuit Eve Geom)
include(${ROOT_USE_FILE})

SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) 
SET(CMAKE_INSTALL_RPATH "/cvmfs/sft.cern.ch/lcg/releases/vdt/0.4.3-992df/x86_64-centos7-gcc8-opt/lib:/cvmfs/sft.cern.ch/lcg/releases/tbb/2019_U7-ba3eb/x86_64-centos7-gcc8-opt/lib:/cvmfs/sft.cern.ch/lcg/releases/Davix/0.7.3-d94fa/x86_64-centos7-gcc8-opt/lib64/:/cvmfs/sft.cern.ch/lcg/releases/png/1.6.37-9c2fe/x86_64-centos7-gcc8-opt/lib/:/cvmfs/sft.cern.ch/lcg/releases/GSL/2.5-32fc5/x86_64-centos7-gcc8-opt/lib/")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

#add_executable(getEfficienciesLbL getEfficienciesLbL.cpp)
#add_executable(getEfficienciesQED getEfficienciesQED.cpp)
#add_executable(getEfficienciesQED_tnpEC getEfficienciesQED_tnpEC.cpp)
#add_executable(getPhotonRecoIDEfficiencies getPhotonRecoIDEfficiencies.cpp)
#add_executable(getRecoIDEfficienciesQED_MC getRecoIDEfficienciesQED_MC.cpp)
#add_executable(preparePhotonIDplots preparePhotonIDplots.cpp)
#add_executable(prepareCastorPlots prepareCastorPlots.cpp)
#add_executable(prepareCaloPlots prepareCaloPlots.cpp)
#add_executable(prepareElectronIDplots prepareElectronIDplots.cpp)
#add_executable(prepareBasicPlots prepareBasicPlots.cpp)
#add_executable(applySelections applySelections.cpp)
#add_executable(runDumpEvent runDumpEvent.cpp)
#add_executable(runEventList runEventList.cpp)
#add_executable(addPixelTrackInfo addPixelTrackInfo.cpp)
#add_executable(prepareTauTauPlots prepareTauTauPlots.cpp)
#add_executable(prepareEleMuPlots prepareEleMuPlots.cpp)
#add_executable(prepareEleMuPlots_Combine prepareEleMuPlots_Combine.cpp)
#add_executable(prepareEleMuPlotsData prepareEleMuPlotsData.cpp)
#add_executable(prepareZDCPlotsData prepareZDCPlotsData.cpp)
#add_executable(prepareEleMuPlotsMCArash prepareEleMuPlotsMCArash.cpp)
#add_executable(prepareEleOneProngPlotsMCArash prepareEleOneProngPlotsMCArash.cpp)
#add_executable(selectQEDEvents selectQEDEvents.cpp)
#add_executable(selectDiphotonEvents selectDiphotonEvents.cpp)
#add_executable(selectAnomalousEvents selectAnomalousEvents.cpp)
#add_executable(selectAnomalousEventsWCastorVeto selectAnomalousEventsWCastorVeto.cpp)
#add_executable(checkSignalLoss checkSignalLoss.cpp)
#add_executable(makeUnfoldingTrees makeUnfoldingTrees.cpp)
#add_executable(makeQEDUnfoldingTrees makeQEDUnfoldingTrees.cpp)
#add_executable(EleMuEleEleMuMu  EleMuEleEleMuMu.cpp)
#add_executable(EleMu  EleMu.cpp)
#add_executable(Unfold  Unfold.cpp)
#add_executable(Test  Test.cpp)
add_executable(selectEleMuEvents  selectEleMuEvents.cpp)
#add_executable(selectGenEleMuEvents  selectGenEleMuEvents.cpp)
#add_executable(EleOneProng  EleOneProng.cpp)
#add_executable(OnlyTriggerPass  OnlyTriggerPass.cpp)
#add_executable(prepareCutflow  prepareCutflow.cpp)
#add_executable(selectElectrons  selectElectrons.cpp)
#add_executable(TunfoldTree  TunfoldTree.cpp)
add_executable(selectMuMuEvents  selectMuMuEvents.cpp)

#set_property(TARGET getEfficienciesLbL PROPERTY CXX_STANDARD 17)
#set_property(TARGET getEfficienciesQED PROPERTY CXX_STANDARD 17)
#set_property(TARGET getEfficienciesQED_tnpEC PROPERTY CXX_STANDARD 17)
#set_property(TARGET getPhotonRecoIDEfficiencies PROPERTY CXX_STANDARD 17)
#set_property(TARGET getRecoIDEfficienciesQED_MC PROPERTY CXX_STANDARD 17)
#set_property(TARGET preparePhotonIDplots PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareCastorPlots PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareCaloPlots PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareElectronIDplots PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareBasicPlots PROPERTY CXX_STANDARD 17)
#set_property(TARGET applySelections PROPERTY CXX_STANDARD 17)
#set_property(TARGET runDumpEvent PROPERTY CXX_STANDARD 17)
#set_property(TARGET runEventList PROPERTY CXX_STANDARD 17)
#set_property(TARGET addPixelTrackInfo PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareTauTauPlots  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareEleMuPlots  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareEleMuPlots_Combine  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareEleMuPlotsData  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareZDCPlotsData  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareEleMuPlotsMCArash  PROPERTY CXX_STANDARD 17)
#set_property(TARGET prepareEleOneProngPlotsMCArash  PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectQEDEvents  PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectDiphotonEvents  PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectAnomalousEvents  PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectAnomalousEventsWCastorVeto  PROPERTY CXX_STANDARD 17)
#set_property(TARGET checkSignalLoss  PROPERTY CXX_STANDARD 17)
#set_property(TARGET makeUnfoldingTrees  PROPERTY CXX_STANDARD 17)
#set_property(TARGET makeQEDUnfoldingTrees  PROPERTY CXX_STANDARD 17)
#set_property(TARGET EleMuEleEleMuMu   PROPERTY CXX_STANDARD 17)
#set_property(TARGET EleMu   PROPERTY CXX_STANDARD 17)
#set_property(TARGET Unfold   PROPERTY CXX_STANDARD 17)
#set_property(TARGET Test   PROPERTY CXX_STANDARD 17)
#set_property(TARGET GenPartEvents   PROPERTY CXX_STANDARD 17)
#set_property(TARGET EleOneProng   PROPERTY CXX_STANDARD 17)
##set_property(TARGET prepareCutflow   PROPERTY CXX_STANDARD 17)
set_property(TARGET selectEleMuEvents   PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectGenEleMuEvents   PROPERTY CXX_STANDARD 17)
#set_property(TARGET selectElectrons   PROPERTY CXX_STANDARD 17)
#set_property(TARGET TunfoldTree   PROPERTY CXX_STANDARD 17)
set_property(TARGET selectMuMuEvents   PROPERTY CXX_STANDARD 17)

include_directories("${PROJECT_SOURCE_DIR}/include")

add_library(Analysis  src/Event.cpp
                      src/EventProcessor.cpp
                      src/PhysObject.cpp
                      src/PhysObjectProcessor.cpp
                      src/ConfigManager.cpp
                      src/DumpEvent.cpp
)

set_property(TARGET Analysis PROPERTY CXX_STANDARD 17)

#target_link_libraries(getEfficienciesLbL Analysis ${ROOT_LIBRARIES})
#target_link_libraries(getEfficienciesQED Analysis ${ROOT_LIBRARIES})
#target_link_libraries(getEfficienciesQED_tnpEC Analysis ${ROOT_LIBRARIES})
#target_link_libraries(getPhotonRecoIDEfficiencies Analysis ${ROOT_LIBRARIES})
#target_link_libraries(getRecoIDEfficienciesQED_MC Analysis ${ROOT_LIBRARIES})
#target_link_libraries(preparePhotonIDplots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareCastorPlots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareCaloPlots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareElectronIDplots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareBasicPlots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(applySelections Analysis ${ROOT_LIBRARIES})
#target_link_libraries(runDumpEvent Analysis ${ROOT_LIBRARIES})
#target_link_libraries(runEventList Analysis ${ROOT_LIBRARIES})
#target_link_libraries(addPixelTrackInfo Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareTauTauPlots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareEleMuPlots Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareEleMuPlots_Combine Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareEleMuPlotsData Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareZDCPlotsData Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectQEDEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectDiphotonEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectAnomalousEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectAnomalousEventsWCastorVeto Analysis ${ROOT_LIBRARIES})
#target_link_libraries(checkSignalLoss Analysis ${ROOT_LIBRARIES})
#target_link_libraries(makeUnfoldingTrees Analysis ${ROOT_LIBRARIES})
#target_link_libraries(makeQEDUnfoldingTrees Analysis ${ROOT_LIBRARIES})
#target_link_libraries(EleMuEleEleMuMu Analysis ${ROOT_LIBRARIES})
#target_link_libraries(EleMu Analysis ${ROOT_LIBRARIES})
#target_link_libraries(Unfold Analysis ${ROOT_LIBRARIES})
#target_link_libraries(Test Analysis ${ROOT_LIBRARIES})
#target_link_libraries(GenPartEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(OnlyTriggerPass Analysis ${ROOT_LIBRARIES})
#target_link_libraries(prepareCutflow Analysis ${ROOT_LIBRARIES})
target_link_libraries(selectEleMuEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectGenEleMuEvents Analysis ${ROOT_LIBRARIES})
#target_link_libraries(selectElectrons Analysis ${ROOT_LIBRARIES})
#target_link_libraries(TunfoldTree Analysis ${ROOT_LIBRARIES})
target_link_libraries(selectMuMuEvents Analysis ${ROOT_LIBRARIES})
